Update Readme, upload html

--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
     <meta charset="UTF-8">
     <meta name="author" content="RUIWEN WANG, CHARLIE YU, CHENGHUI ZHENG">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-    <link rel="icon" href="pictures/icon.png">
-
-    <title>Charlie Yu</title>
 </head>
 
 <body>
-    Click <a href="maps.html"> here for </a> maps visualizing data from <a href=condos.ca> condos.ca </a>.
-
+    Please refer to our <a href = https://github.com/jiawei-yu-97/STA2453-proj1-group6>Github Repository</a> for links, codes and reports.
 </body>
